Added to static tensor

--- a/performance_tests/container_comparison/Makefile
+++ b/performance_tests/container_comparison/Makefile
@@ -4,6 +4,7 @@
 
 EXE_SCONT 		:=  scontainer 
 EXE_DCONT       :=  dcontainer
+EXE_CONT        :=   container
 
 ########################################################################################
 #                                   INPUT FILES                                        #
@@ -46,10 +47,11 @@ CXX_FLAGS 		:= -std=c++11 -w -O3
 # 					                TARGET RULES 					                   #
 #######################################################################################
 
-.PHONY: scont scont_asm dcont dcont_asm clean
+.PHONY: scont scont_asm dcont dcont_asm cont clean 
 	
 scont: build_and_run_scont
 dcont: build_and_run_dcont
+cont:  build_and_run_cont
 
 build_and_run_scont: build_scont
 	rm -rf *.o
@@ -85,10 +87,21 @@ dcont_asm: CXX_FLAGS += -S -g -fverbose-asm -masm=intel -O3
 dcont_asm: dcontainer.s 
 	as -adhln dcontainer.s > dcontainer.lst
 
+build_and_run_cont: build_cont
+	rm -rf *.o
+	./$(EXE_CONT)
+
+container.o: container.cpp
+	$(CXX) $(CXX_INC) $(CXX_FLAGS) -o $@ -c $<
+	
+build_cont: container.o
+	$(CXX) -o $(EXE_CONT) $+ $(CXX_LDIR) $(CXX_LIBS)
+	
 clean:
 	rm -rf *.o
 	rm -rf *.s
 	rm -rf *.lst
 	rm -rf $(EXE_SCONT) 
 	rm -rf $(EXE_DCONT) 
+	rm -rf $(EXE_CONT) 
 	
