--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ permalink:        pretty
 # Setup
 title:            Tensor
 tagline:          'A C++ expression template library for N dimension tensor computations'
-description:      'A C++ expression template library designed to provide operations on N dimensional tensors using static or dynamic containers, and CPU or GPU devices."
+description:      'A C++ expression template library designed to provide operations on N dimensional tensors using static or dynamic containers, and CPU or GPU devices.'
 url:              https://robclu.github.io/tensor
 baseurl:          /tensor
 
